[package]
name = "cartero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
glib = "0.19.3"
gtk4 = "0.8.1"
isahc = "1.7.2"
sourceview5 = "0.8.0"
